# musicalist

./: Cargo.toml  README.md  Trunk.toml  extract_musicals.sh  index.html  musicalist-2bdb85ee78f5a60f.js  musicalist-2bdb85ee78f5a60f_bg.wasm  musicalist-3e8a5cb60e73b686.js  musicalist-3e8a5cb60e73b686_bg.wasm  musicalist-3f9e22861a696d90.js  musicalist-3f9e22861a696d90_bg.wasm  musicalist-4877a74c324e6edd.js  musicalist-4877a74c324e6edd_bg.wasm  musicalist-4b503ec958c36e31.js  musicalist-4b503ec958c36e31_bg.wasm  musicalist-74bc8e009594574a.js  musicalist-74bc8e009594574a_bg.wasm  musicalist-898d864746dcf313.js  musicalist-898d864746dcf313_bg.wasm  musicalist-b3ed716b828ccc84.js  musicalist-b3ed716b828ccc84_bg.wasm  musicalist-c15ab65f62ecb4b3.js  musicalist-c15ab65f62ecb4b3_bg.wasm  musicalist-d0f416e1617e5a84.js  musicalist-d0f416e1617e5a84_bg.wasm  musicalist-f0fa8f97b59e5653.js  musicalist-f0fa8f97b59e5653_bg.wasm  musicalist-f219062689800b73.js  musicalist-f219062689800b73_bg.wasm  musicalist-f4a0827f1006c198.js  musicalist-f4a0827f1006c198_bg.wasm  musicalist-fec1a707e36f0f50.js  musicalist-fec1a707e36f0f50_bg.wasm  musicals.rs
src/: main.rs  model.rs  musicals.csv  musicals.rs
