[package]
name = "musicalist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4"
csv = "1.2"
wasm-logger = "0.2.0"
yew-router = { version = "0.17.0" }
rmp-serde = { version = "1" }
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
