[package]
name = "musicalist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18"
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4"
csv = "1.2"
wasm-logger = "0.2.0"
yew-router = { version = "0.17" }
yew-hooks = { version = "0.2" }
rmp-serde = { version = "1" }
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
gloo = "0.8"
gloo-storage = "0.2"
[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
